--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,6 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:30.4.1')
     implementation('com.google.firebase:firebase-auth')
     implementation('com.google.firebase:firebase-storage')
+    implementation("androidx.navigation:navigation-fragment:2.5.2")
+    implementation("androidx.navigation:navigation-ui:2.5.2")
 }
