--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,5 @@
+import com.android.build.api.dsl.ManagedVirtualDevice
+
 plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
@@ -26,6 +28,21 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    // from https://github.com/android/testing-samples/blob/main/ui/espresso/FragmentScenarioSample/app/build.gradle
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+        managedDevices {
+            devices {
+                nexusFiveApi28(ManagedVirtualDevice) {
+                    device = "Nexus Five"
+                    apiLevel = 28
+                    systemImageSource = "aosp-atd"
+                }
+            }
+        }
+    }
 }
 
 dependencies {
@@ -35,9 +52,21 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation('androidx.drawerlayout:drawerlayout:1.1.1')
+
+    debugImplementation('androidx.fragment:fragment-testing:1.5.3')
+    debugImplementation('androidx.test:core:1.4.0')
+
     testImplementation 'junit:junit:4.13.2'
+    testImplementation('androidx.test.espresso:espresso-core:3.4.0')
+    testImplementation('androidx.test:core:1.4.0')
+    testImplementation('androidx.test.ext:junit:1.1.3')
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation('androidx.test:core:1.4.0')
+    androidTestImplementation('androidx.test.ext:junit:1.1.3')
+    androidTestImplementation('androidx.test:runner:1.4.0')
+
     implementation platform('com.google.firebase:firebase-bom:30.4.1')
     implementation('com.google.firebase:firebase-auth')
     implementation('com.google.firebase:firebase-storage')
