--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,18 +54,14 @@ dependencies {
     implementation('androidx.drawerlayout:drawerlayout:1.1.1')
 
     debugImplementation('androidx.fragment:fragment-testing:1.5.3')
-    debugImplementation('androidx.test:core:1.4.0')
 
     testImplementation 'junit:junit:4.13.2'
-    testImplementation('androidx.test.espresso:espresso-core:3.4.0')
-    testImplementation('androidx.test:core:1.4.0')
     testImplementation('androidx.test.ext:junit:1.1.3')
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation('androidx.test:core:1.4.0')
-    androidTestImplementation('androidx.test.ext:junit:1.1.3')
     androidTestImplementation('androidx.test:runner:1.4.0')
+    androidTestImplementation('androidx.test:rules:1.4.0')
 
     implementation platform('com.google.firebase:firebase-bom:30.4.1')
     implementation('com.google.firebase:firebase-auth')
