--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation('androidx.drawerlayout:drawerlayout:1.1.1')
 
+    implementation('com.google.code.gson:gson:2.9.1')
+
     debugImplementation('androidx.fragment:fragment-testing:1.5.3')
 
     testImplementation 'junit:junit:4.13.2'
