--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation('androidx.drawerlayout:drawerlayout:1.1.1')
+    implementation('androidx.preference:preference:1.2.0')
 
     implementation('com.google.code.gson:gson:2.9.1')
 
