--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation('androidx.drawerlayout:drawerlayout:1.1.1')
     implementation('androidx.preference:preference:1.2.0')
+    implementation('com.google.android.flexbox:flexbox:3.0.0')
 
     implementation('com.google.code.gson:gson:2.9.1')
 
