--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation('androidx.drawerlayout:drawerlayout:1.1.1')
     implementation('androidx.preference:preference:1.2.0')
     implementation('com.google.android.flexbox:flexbox:3.0.0')
+    implementation('androidx.recyclerview:recyclerview:1.2.1')
 
     implementation('com.google.code.gson:gson:2.9.1')
 
