--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,14 @@
 language: android
-dist: trusty
+android:
+  components:
+    - tools
+    - platform-tools
+    - build-tools-28.0.3
+    - android-28
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - extra-android-m2repository
+jdk:
+  - oraclejdk11
+before_install:
+  - chmod +x gradlew
