--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: android
+dist: trusty
 android:
   components:
     - tools
     - platform-tools
-    - build-tools-27.0.3
-    - android-27
+    - build-tools-30.0.3
+    - android-33
     - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
