--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
+sudo: required
 language: android
+jdk: oraclejdk8
 dist: trusty
 android:
+  licenses:
+    - 'android-sdk-preview-license-.+'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
   components:
     - tools
     - platform-tools
@@ -9,7 +15,6 @@ android:
     - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
-jdk:
-  - oraclejdk11
 before_install:
   - chmod +x gradlew
+  - yes | sdkmanager "platforms;android-30"
