--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ android:
   components:
     - tools
     - platform-tools
+    - tools
     - extra-google-google_play_services
-    - extra-google-m2repository
     - extra-android-m2repository
   licenses:
     - 'android-sdk-preview-license-.+'
