--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
+os: linux
 language: android
-jdk: oraclejdk11
+jdk: openjdk11
 dist: trusty
 android:
   components:
@@ -12,11 +13,19 @@ android:
     - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
+    
+env:
+  global:
+    - TARGET_VERSION=33
+    - ANDROID_BUILD_TOOLS_VERSION=30.0.3
+    - ANDROID_HOME=~/android-sdk
 
 before_install:
   - touch $HOME/.android/repositories.cfg
-  - yes | sdkmanager "platforms;android-33"
-  - yes | sdkmanager "build-tools;30.0.3"
+  - wget "https://dl.google.com/android/repository/commandlinetools-linux-7302050_latest.zip" -O commandlinetools.zip
+  - unzip commandlinetools.zip -d $ANDROID_HOME/
+  - yes | $ANDROID_HOME/cmdline-tools/bin/sdkmanager "platforms;android-${TARGET_VERSION}" --sdk_root=$ANDROID_HOME
+  - yes | $ANDROID_HOME/cmdline-tools/bin/sdkmanager "build-tools;${ANDROID_BUILD_TOOLS_VERSION}" --sdk_root=$ANDROID_HOME
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
