--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ android:
     - tools
     - extra-google-google_play_services
     - extra-android-m2repository
-    - sys-img-armeabi-v7a-android-21
+    - sys-img-armeabi-v7a-android-23
   licenses:
     - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
@@ -29,10 +29,14 @@ before_install:
   - yes | $ANDROID_HOME/cmdline-tools/bin/sdkmanager "build-tools;${ANDROID_BUILD_TOOLS_VERSION}" --sdk_root=$ANDROID_HOME
   
 before_script:
-  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a -c 100M
+  - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a -c 100M
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
+  - adb devices
   - adb shell input keyevent 82 &
+script:
+  - android list target
+  - ./gradlew connectedAndroidTest
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
