--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,11 @@ android:
   components:
     - tools
     - platform-tools
-    - tools
     - extra-google-google_play_services
     - extra-android-m2repository
-    - sys-img-armeabi-v7a-android-23
+    - android-24
+    - build-tools-24.0.3
+    - sys-img-armeabi-v7a-android-24
   licenses:
     - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
@@ -29,7 +30,7 @@ before_install:
   - yes | $ANDROID_HOME/cmdline-tools/bin/sdkmanager "build-tools;${ANDROID_BUILD_TOOLS_VERSION}" --sdk_root=$ANDROID_HOME
   
 before_script:
-  - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a -c 100M
+  - echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a -c 100M
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb devices
