--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,8 @@ before_install:
   - yes | $ANDROID_HOME/cmdline-tools/bin/sdkmanager "build-tools;${ANDROID_BUILD_TOOLS_VERSION}" --sdk_root=$ANDROID_HOME
   
 before_script:
-  - echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a -c 100M
-  - emulator -avd test -no-audio -no-window &
+  - echo no | android create avd --force --name test --target android-24 --abi armeabi-v7a -c 100M
+  - emulator -avd test -no-skin -no-audio -no-window -gpu off &
   - android-wait-for-emulator
   - adb devices
   - adb shell input keyevent 82 &
