--- a/.travis.yml
+++ b/.travis.yml
@@ -31,10 +31,10 @@ before_install:
   
 before_script:
   - echo no | android create avd --force --name test --target android-24 --abi armeabi-v7a -c 100M
-  - emulator -avd test -no-skin -no-audio -no-window -gpu off &
+  - emulator -avd test -no-window -gpu off &
   - android-wait-for-emulator
-  - adb devices
   - adb shell input keyevent 82 &
+  
 script:
   - android list target
   - ./gradlew connectedAndroidTest
